[gd_scene load_steps=9 format=3 uid="uid://cvip6m8f24inr"]

[ext_resource type="Script" uid="uid://ds6nukonfixo4" path="res://ui/main_ui.gd" id="1_78d5d"]
[ext_resource type="PackedScene" uid="uid://dqne2t68jyax2" path="res://ui/top_bar.tscn" id="2_852uu"]
[ext_resource type="PackedScene" uid="uid://de384mqpjawph" path="res://ui/tab_container.tscn" id="3_5ris2"]
[ext_resource type="PackedScene" uid="uid://c7rq6fiqo8bv4" path="res://Scenes/object_viewing.tscn" id="4_186kx"]
[ext_resource type="Texture2D" uid="uid://cpg7bchl457ac" path="res://theme/assets/icons/theme/SplitGrabber2.svg" id="4_podmt"]
[ext_resource type="PackedScene" uid="uid://75flqcgsoecp" path="res://Scenes/simple_tab.tscn" id="5_186kx"]
[ext_resource type="PackedScene" uid="uid://cubtixgrjj65y" path="res://Scenes/help.tscn" id="7_ti1yg"]
[ext_resource type="PackedScene" path="res://Scenes/user_entry.tscn" id="8_fa42e"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_78d5d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" parent="VBoxContainer" instance=ExtResource("2_852uu")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_icons/grabber = ExtResource("4_podmt")
split_offset = -200

[node name="LeftPanel" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Query & Filter"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FieldLabel" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Field:"

[node name="FieldList" type="OptionButton" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "0 objects"
popup/item_0/id = 0

[node name="ObjectsList" type="OptionButton" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "0 objects"
popup/item_0/id = 0

[node name="ObjectIDLabel" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Object ID:"

[node name="ObjectIDEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter object ID"

[node name="SearchButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Search"

[node name="ImportButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Import"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FiltersBox" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FiltersLabel" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/FiltersBox"]
layout_mode = 2
text = "Bands:"

[node name="FiltersSelect" type="OptionButton" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/FiltersBox"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Any"
popup/item_0/id = 0
popup/item_1/text = "F150W+F200W"
popup/item_1/id = 1
popup/item_2/text = "115+150+200"
popup/item_2/id = 2

[node name="RedshiftRangeLabel" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Redshift Range:"

[node name="RedshiftRangeContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MinRedshift" type="SpinBox" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/RedshiftRangeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 0.5
prefix = "Min:"

[node name="MaxRedshift" type="SpinBox" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/RedshiftRangeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 5.0
prefix = "Max:"

[node name="ApplyFiltersButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Apply Filters"

[node name="Spacer2" type="Control" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25.445)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.866667, 1)
theme_override_font_sizes/font_size = 18
text = "Object properties"
horizontal_alignment = 1

[node name="ObjectViewing" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer" instance=ExtResource("4_186kx")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2

[node name="Preferences" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.866667, 1)
theme_override_font_sizes/font_size = 18
text = "Options"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="CBFlux" type="CheckBox" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fluxes"

[node name="CBBestfit" type="CheckBox" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bestfit"

[node name="CBErrors" type="CheckBox" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Errors"

[node name="CBContam" type="CheckBox" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Contam"

[node name="Spacer" type="Control" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MainPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="TabContainer" parent="VBoxContainer/HSplitContainer/MainPanel" instance=ExtResource("3_5ris2")]
visible = false
layout_mode = 2

[node name="SimpleTab" parent="VBoxContainer/HSplitContainer/MainPanel" instance=ExtResource("5_186kx")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HelpPanel" parent="." instance=ExtResource("7_ti1yg")]
visible = false
layout_mode = 1

[node name="UserEntry" parent="." instance=ExtResource("8_fa42e")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 864.0
offset_top = 288.0
offset_right = 1364.0
offset_bottom = 788.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="item_selected" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/FieldList" to="." method="_on_field_selected"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ObjectsList" to="." method="_on_objects_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ApplyFiltersButton" to="." method="_on_apply_filters_button_pressed"]
[connection signal="save_galaxy" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ObjectViewing" to="." method="save_galaxy"]
[connection signal="user_set" from="UserEntry" to="." method="set_user_details"]
